# erdfa-publish

./: .gitignore  .gitmodules  .service-manifest  Cargo.toml  Makefile  README.md  flake.nix  llm.txt  notebooklm.mk
.github/workflows/: build.yml
docs/: FRACTRAN_ONBOARDING.md
erdfa-py/: .gitignore  Cargo.toml  flake.nix  pyproject.toml
erdfa-py/src/: lib.rs
erdfa-py/tests/: test_seal.py
lean4-lib/: Makefile  monster_element.cbor
lean4-lib/DA51/: Conformal.lean  Encode.lean  Monster.lean  MultiAttractor.lean  RealRoundTrip.lean  RoundTrip.lean  Theories.lean  Vertex.lean
minizinc/: batch_campaign.mzn  batch_cicada71_10.dzn  batch_cicada71_full.dzn  campaign_cicada71_devnet.dzn  campaign_cicada71_mainnet.dzn  campaign_multichain_testnet.dzn
scripts/: eigenform_rustc.sh  multiscale_witness.py  test_multiscale_witness.sh  viz_orbifold.py  zkperf_coverage.sh
shards/binding-ontology/: clifford_rs.cbor  clifford_rs.lean  lib_rs.cbor  mkfractran_rs.cbor  ontology_global.cbor  ontology_global.json  ontology_global.lean
sidechain/: solfunmeme-crawl.service  solfunmeme-crawl.timer  solfunmeme-service.service
sidechain/docs/: CODEBASE_MAP.md  PLUGINS.md  SECURITY_POLICY.md
sidechain/lean4/: Bills.lean  FederalGov.lean  FederalModel.lean  Governance.lean  VotingProtocol.lean
sidechain/proofs/: completeness_proof.json  credentials.json  holder_identities.json  tally.json
src/: cft.rs  distribute.rs  federation.rs  hecke.rs  ingest.rs  ipfs.rs  lib.rs  maass.rs  mixer.rs  plugins.rs  privacy.rs  seal.rs  stego.rs
tests/: codec-Makefile  codec-test.py  test_deployments.rs
tools/: dasl_reader.py
