[package]
name = "erdfa-publish"
version = "0.1.0"
edition = "2021"
description = "Semantic UI components as CBOR shards with Conformal Field Tower text decomposition"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meta-introspector/erdfa-publish"
homepage = "https://github.com/meta-introspector/erdfa-publish"
documentation = "https://github.com/meta-introspector/erdfa-publish"
keywords = ["cbor", "semantic", "shards", "a11y", "cft"]
categories = ["encoding", "data-structures", "accessibility"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
arrow = { version = "53", default-features = false, features = ["json"] }
linux-perf-data = "0.6"
anyhow = "1"
lattice-safe-suite = "0.4"

[[bin]]
name = "erdfa-cli"
path = "src/bin/erdfa-cli.rs"

[[bin]]
name = "cbor2agda"
path = "src/bin/cbor2agda.rs"

[[bin]]
name = "cbor2lean4"
path = "src/bin/cbor2lean4.rs"

[[bin]]
name = "erdfa-benchmark"
path = "src/bin/benchmark.rs"
