[package]
name = "erdfa-publish"
version = "0.1.0"
edition = "2021"
description = "Semantic UI components as CBOR shards with Conformal Field Tower text decomposition"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meta-introspector/erdfa-publish"
homepage = "https://github.com/meta-introspector/erdfa-publish"
documentation = "https://github.com/meta-introspector/erdfa-publish"
keywords = ["cbor", "semantic", "shards", "a11y", "cft"]
categories = ["encoding", "data-structures", "accessibility"]
readme = "README.md"

[features]
default = ["native"]
native = ["dep:parquet", "dep:arrow", "dep:linux-perf-data", "dep:libloading", "dep:lattice-safe-suite", "dep:clap"]
wasm = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ciborium = "0.2"
clap = { version = "4", features = ["derive"], optional = true }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"], optional = true }
arrow = { version = "53", default-features = false, features = ["json"], optional = true }
linux-perf-data = { version = "0.6", optional = true }
anyhow = "1"
lattice-safe-suite = { version = "0.4", optional = true }
libloading = { version = "0.8", optional = true }

[[bin]]
name = "erdfa-cli"
path = "src/bin/erdfa-cli.rs"

[[bin]]
name = "cbor2agda"
path = "src/bin/cbor2agda.rs"

[[bin]]
name = "cbor2lean4"
path = "src/bin/cbor2lean4.rs"

[[bin]]
name = "erdfa-benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "campaign-planner"
path = "src/bin/campaign_planner.rs"

[[bin]]
name = "stego-gossip"
path = "src/bin/stego_gossip.rs"

[[bin]]
name = "ledger-to-nft"
path = "src/bin/ledger_to_nft.rs"

[[bin]]
name = "solana-ingest"
path = "src/bin/solana_ingest.rs"
