[package]
name = "erdfa-publish"
version = "0.1.0"
edition = "2021"
description = "Semantic UI components as CBOR shards with Conformal Field Tower text decomposition"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meta-introspector/erdfa-publish"
homepage = "https://github.com/meta-introspector/erdfa-publish"
documentation = "https://github.com/meta-introspector/erdfa-publish"
keywords = ["cbor", "semantic", "shards", "a11y", "cft"]
categories = ["encoding", "data-structures", "accessibility"]
readme = "README.md"

[features]
default = ["native"]
ipfs = ["dep:rust-unixfs", "dep:ipld-core", "dep:multibase", "dep:dirs-next", "dep:data-encoding"]
native = ["dep:parquet", "dep:arrow", "dep:linux-perf-data", "dep:libloading", "dep:lattice-safe-suite", "dep:clap", "dep:ureq"]
cli = ["dep:clap"]
wasm = []

[dependencies]
serde_bytes = "0.11"
log = "0.4"
dirs-next = { version = "2", optional = true }
data-encoding = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ciborium = "0.2"
clap = { version = "4", features = ["derive"], optional = true }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"], optional = true }
arrow = { version = "53", default-features = false, features = ["json"], optional = true }
linux-perf-data = { version = "0.6", optional = true }
anyhow = "1"
rayon = "1.10"
lattice-safe-suite = { version = "0.4", optional = true }
libloading = { version = "0.8", optional = true }
ureq = { version = "2", optional = true, features = ["json"] }

[[bin]]
name = "erdfa-cli"
path = "src/bin/erdfa-cli.rs"

[[bin]]
name = "cbor2agda"
path = "src/bin/cbor2agda.rs"

[[bin]]
name = "cbor2lean4"
path = "src/bin/cbor2lean4.rs"

[[bin]]
name = "erdfa-benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "campaign-planner"
path = "src/bin/campaign_planner.rs"

[[bin]]
name = "stego-gossip"
path = "src/bin/stego_gossip.rs"

[[bin]]
name = "ledger-to-nft"
path = "src/bin/ledger_to_nft.rs"

[[bin]]
name = "solana-ingest"
path = "src/bin/solana_ingest.rs"

[[bin]]
name = "erdfa-mixer"
path = "src/bin/erdfa_mixer.rs"

[[bin]]
name = "solfunmeme-service"
path = "src/bin/solfunmeme_service.rs"

[[bin]]
name = "zkperf-verify"
path = "src/bin/zkperf_verify.rs"
required-features = ["native"]

[[bin]]
name = "solfunmeme"
path = "src/bin/solfunmeme_cli.rs"
required-features = ["native"]

[[bin]]
name = "zkperf-services"
path = "src/bin/zkperf_services.rs"
required-features = ["native"]

[[bin]]
name = "shard-dedup"
path = "src/bin/shard_dedup.rs"
required-features = ["native"]

# IPFS (from kant-pastebin)
[dependencies.rust-unixfs]
path = "vendor/rust-ipfs/unixfs"
optional = true

[dependencies.ipld-core]
version = "0.4.1"
optional = true

[dependencies.multibase]
version = "0.9"
optional = true

[[bin]]
name = "git-index"
path = "src/bin/git_index.rs"
required-features = ["cli"]
